# needle_pantograph_ros2

./: README.md  needle_pantograph_ros2.repos  test_py_models.ipynb
.docker/: Dockerfile  README.md
.github/workflows/: ci.yml
pantograph_bringup/: CMakeLists.txt  package.xml
pantograph_bringup/launch/: pantograph.launch.py
pantograph_description/: CMakeLists.txt  package.xml
pantograph_description/config/: beckhoff_el4134.yaml  beckhoff_el4134_left.yaml  beckhoff_el4134_right.yaml  beckhoff_el5101.yaml  beckhoff_el5101_left.yaml  beckhoff_el5101_right.yaml  initial_positions.yaml  pantograph.config.xacro  ros2_controllers.yaml
pantograph_description/meshes/: mesh_base.stl  mesh_fulcrum.stl  mesh_link_left_1.stl  mesh_link_left_2.stl  mesh_link_right_1.stl  mesh_link_right_2.stl  mesh_tool0.stl
pantograph_description/ros2_control/: pantograph.r2c_hardware.xacro
pantograph_description/rviz/: display_robot.rviz  display_robot_2D.rviz
pantograph_description/urdf/: pantograph.urdf.xacro
pantograph_library/: CMakeLists.txt  package.xml
pantograph_library/include/pantograph_library/: pantograph.hpp  pantograph_model.hpp
pantograph_library/pantograph_library/: __init__.py  _model.py
pantograph_library/src/: pantograph_model.cpp
pantograph_library/tests/: test_panto_model.cc
pantograph_mimick_controller/: CMakeLists.txt  package.xml  pantograph_mimick_controller_plugin.xml
pantograph_mimick_controller/include/pantograph_mimick_controller/: pantograph_mimick_controller.hpp  pantograph_mock_motors_controller.hpp  pantograph_mock_operator_controller.hpp  visibility_control.h
pantograph_mimick_controller/src/: pantograph_controller_utils.hpp  pantograph_mimick_controller.cpp  pantograph_mimick_controller_parameters.yaml  pantograph_mock_motors_controller.cpp  pantograph_mock_operator_controller.cpp
pantograph_nodes/: package.xml  setup.cfg  setup.py
pantograph_nodes/pantograph_nodes/: haptic_control.py  interactive_fake_operator.py  node_tutorial_haptics.py
pantograph_stereo_cam/: README.md  package.xml  setup.cfg  setup.py
pantograph_stereo_cam/config/: cam_0_info.yaml  cam_1_info.yaml  params_1.yaml  params_2.yaml  recorded_pts.csv  usefull_commands.txt  world_to_cam_0_info.yaml  world_to_cam_1_info.yaml
pantograph_stereo_cam/pantograph_stereo_cam/: calib.py  calibration_settings.yaml  stereo_tracker.py  triangulation_test.py
